# resonantos-vnext

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  rust-toolchain.toml  vite.config.ts
.github/workflows/: alpha-build.yml  haus-vm.yml
addons/resonant-browser-host/: README.md  package-lock.json  package.json
addons/resonant-browser-host/src/: browser-host.mjs  electron-visible-host.mjs
addons/resonant-browser-host/test/: browser-host.test.mjs  electron-visible-host.test.mjs
addons/resonant-browser-native/: README.md  native-browser-host.contract.json  package.json
addons/resonant-browser-native/native_host/: CMakeLists.txt
addons/resonant-browser-native/native_host/include/: resonant_browser_native_bridge.h
addons/resonant-browser-native/native_host/mac/: Info.plist.in  helper-Info.plist.in
addons/resonant-browser-native/native_host/src/: resonant_browser_native_bridge.cc  resonant_browser_native_bridge_mac.mm  resonant_browser_native_host.cc  resonant_browser_native_host_mac.mm
addons/resonant-browser-native/scripts/: audit-browser-addon-drift.mjs  fetch-cef.mjs  probe-native-host.mjs
addons/resonant-browser-native/test/: native-cef-embed.test.mjs  native-cef-smoke.test.mjs  native-host-contract.test.mjs
docs/: ALPHA_DISTRIBUTION.md  ALPHA_PREVIEW_AUDIT_2026-04-28.md  FEATURE_BACKLOG.md  PROJECT_STATUS.md  README.md
docs/architecture/: ADR-004-chat-rail.md  ADR-005-provider-fabric-routing.md  ADR-006-addon-runtime-sdk.md  ADR-008-wallet-web3-security.md  ADR-009-rust-service-ipc-boundary.md  ADR-011-living-archive-host-service.md  ADR-012-living-archive-approval-policy.md  ADR-013-living-archive-memory-domains.md  ADR-015-delegation-fabric-addon-catalog-native-tools.md  ADR-016-context-memory-compaction.md  ADR-016-haus-vm-hermes-replacement.md  ADR-017-resonant-browser-addon.md  ADR-018-addon-sdk-v0.md  ADR-019-obsidian-addon-embedded-workspace.md  ADR-020-resonant-notes-clean-room-workspace.md  ADR-021-opencode-addon-hosted-service.md  ADR-022-portable-user-state-secure-vault.md  ADR-023-addon-repository-registry-model.md  ADR-024-addon-store-commerce.md  ADR-025-native-embedded-browser-host.md  ADR-026-minimal-kernel-replaceable-default-addons.md  ADR-027-living-archive-llm-wiki-compliance.md  ADR-032-real-hermes-runtime-in-haus-vm.md  MODULE_MAP.md  VNEXT_SYSTEM_DIAGRAM.md
docs/architecture/slides/: resonantos-vnext-3-slide-deck.html
docs/product/: ICON-001-resonantos-svg-system.md  UX-001-resonantos-app-shell.md  UX-002-glocal-discovery-interface.md
docs/working/: SESSION_CONTEXT_2026-04-25.md
examples/: reference-memory-service.mjs
examples/addons/: reference-memory.json
infra/haus-vm/: .gitignore  DEPLOY.md  README.md  flake.nix  microvm-config.nix
infra/haus-vm/chat/: chat-with-zorin.html
infra/haus-vm/pulumi/: Pulumi.yaml  README.md  package.json  tsconfig.json
infra/haus-vm/widget-bridge/: package.json  tsconfig.json
public/addons/: audio2tol.json  augmentor-chat.json  browser.json  dev-index.json  hermes.json  index.json  living-archive.json  obsidian.json  openclaw.json  opencode.json  r-awareness.json  telegram-channel.json  terminal.json
public/icons/: README.md  icon-preview.html
scripts/: build-native-browser.mjs
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive_service.rs  browser_host_service.rs  browser_native_service.rs  browser_service.rs  delegation_service.rs  hermes_service.rs  host_state.rs  lib.rs  obsidian_service.rs  opencode_service.rs  provider_service.rs  terminal_service.rs
src-tauri/src/archive_service/: archive_review.rs  archive_runtime.rs  archive_source_library.rs  archive_system_memory.rs  archive_tol_bundles.rs
src/core/: browser-tools.test.ts  browser-tools.ts  chat.test.ts  chat.ts  context-memory.test.ts  context-memory.ts  contracts.ts  defaults.ts  delegation.test.ts  delegation.ts  memory-provider.reference.test.ts  memory-provider.test.ts  memory-provider.ts  model-strategy.test.ts  model-strategy.ts  policies.test.ts  policies.ts  provider-credentials.ts  provider-service.test.ts  provider-service.ts  runtime.test.ts  runtime.ts
src/modules/addons/: AddOnsWorkspace.tsx  HermesAddonPanel.tsx  ObsidianAddonPanel.tsx  ObsidianAddonSections.tsx  controller.ts  obsidian-addon-model.ts
src/modules/archive/: ArchiveAudio2TolIntake.tsx  ArchiveClassificationReviewPanel.tsx  ArchiveDiagnostics.tsx  ArchiveDocumentReader.tsx  ArchiveLibraryImporter.tsx  ArchiveRecentActivity.tsx  ArchiveReviewDesk.tsx  ArchiveSearchPanel.tsx  ArchiveSourceRegistry.tsx  ArchiveSourceScanResults.tsx  ArchiveWorkspace.test.ts  ArchiveWorkspace.tsx  archive-ai-memory-jobs.ts  archive-augmentor-handoff.ts  archive.css  controller.ts
src/modules/browser/: BrowserWorkspace.tsx  browser.css
src/modules/chat/: ContextMemoryPanel.tsx  StrategistChatRail.tsx  archive-context.test.ts  archive-context.ts  archive-intake-controller.ts  chat-rail.css  controller.test.ts  controller.ts  dictation.ts  icons.tsx  messages.css  run-guard.test.ts  run-guard.ts  thread-controller.ts
src/modules/delegation/: DelegationWorkspace.tsx  delegation.css
src/modules/obsidian/: ObsidianEditor.tsx  ObsidianMetadataPanel.tsx  ObsidianVaultIndexPanel.tsx  ObsidianVaultTree.tsx  ObsidianWorkspace.tsx  obsidian-workspace-model.ts  obsidian-workspace.css
src/modules/opencode/: OpenCodeWorkspace.tsx  opencode-workspace.css
src/modules/overview/: OverviewWorkspace.tsx
src/modules/recovery/: recovery.css
src/modules/settings/: SettingsWorkspace.test.tsx  SettingsWorkspace.tsx  controller.ts  provider-templates.test.ts  provider-templates.ts  settings.css
src/modules/shell/: controller.ts  selectors.ts  system-slots.test.ts  system-slots.ts
src/modules/strategist/: controller.ts
src/modules/terminal/: TerminalWorkspace.tsx  terminal.css
src/modules/zorin/: ZorinNative.tsx  ZorinWorkspace.tsx  zorin-workspace.css
src/styles/: responsive.css  shell.css  workspace-cards.css
(+17 files in other folders)
