[package]
name = "resonantos_vnext"
version = "0.1.0"
description = "ResonantOS vNext desktop shell foundation"
authors = ["Resonant Alpha"]
edition = "2021"

[lib]
name = "resonantos_vnext_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures-util = "0.3"
portable-pty = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-dialog = "2"
tungstenite = "0.24"
